# custon_airflow

./: Dockerfile  README.md  execution_logs.csv  exemplo_00.py  exemplo_01.py  exemplo_02.py  exemplo_05.py  pyproject.toml
.astro/: config.yaml
dags/: exemplo_04.py
