[tool.poetry]
name = "minha-pipeline"
version = "0.1.0"
description = ""
authors = ["luciano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
logger = "^1.4"
loguru = "^0.7.2"
streamlit = "^1.32.2"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
